--- a/index.html
+++ b/index.html
@@ -4,70 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEXT CLOCJ TIME</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: auto 1fr auto;
-            min-height: 50vh;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-            grid-column: 1 / -1;
-        }
-        nav {
-            background-color: #555;
-            padding: 10px;
-            text-align: center;
-            grid-column: 1 / -1;
-        }
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-        }
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: auto;
-            border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-        }
-        p {
-            color: #555;
-            line-height: 1.5;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-            grid-column: 1 / -1;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
     
@@ -181,6 +119,6 @@ En conclusión, los sistemas GPS de rastreo para empresas de transporte son una 
     <footer>
         <p>Comunicate linea +13043642487</p>
     </footer>
-    
+    <script src="main.js"></script>
 </body>
 </html>
